--- a/ideas-angular-client/public/index.html
+++ b/ideas-angular-client/public/index.html
@@ -58,8 +58,10 @@
         <div ng-repeat="idea in ideas">
 
           <div class="list-group">
-            <h4 class="list-group-item-heading">{{ idea.idea }}</h4>
-            <p class="list-group-item-text">{{ idea.description }}</p>
+            <li class="list-group-item">
+              <h4 class="list-group-item-heading">{{ idea.idea }}</h4>
+              <p class="list-group-item-text">{{ idea.description }}</p>
+            </li>
           </div>
 
         </div>
